--- a/app/src/main/res/layout/activity_halaman_daftar_phone.xml
+++ b/app/src/main/res/layout/activity_halaman_daftar_phone.xml
@@ -13,44 +13,44 @@
         android:scaleType="centerCrop"
         android:src="@drawable/bgmasuk"
         />
-<!--    <ImageView-->
-<!--        android:id="@+id/imgBackground2"-->
-<!--        android:layout_width="fill_parent"-->
-<!--        android:layout_height="fill_parent"-->
-<!--        android:scaleType="centerCrop"-->
+    <!--    <ImageView-->
+    <!--        android:id="@+id/imgBackground2"-->
+    <!--        android:layout_width="fill_parent"-->
+    <!--        android:layout_height="fill_parent"-->
+    <!--        android:scaleType="centerCrop"-->
 
-<!--        android:background="#1Affffff"-->
-<!--        />-->
+    <!--        android:background="#1Affffff"-->
+    <!--        />-->
 
-<!--    <ImageView-->
-<!--        android:id="@+id/img_logo"-->
-<!--        android:layout_width="80dp"-->
-<!--        android:layout_height="80dp"-->
-<!--        android:layout_above="@id/text_masukSignUp"-->
-<!--        android:layout_centerHorizontal="true"-->
-<!--        android:background="@drawable/logosatwa"-->
-<!--        android:padding="8dp" />-->
-<!--    -->
-<!--    <ImageView-->
-<!--        android:id="@+id/img_logo3"-->
-<!--        android:layout_width="260dp"-->
-<!--        android:layout_height="50dp"-->
-<!--        android:layout_below="@id/img_logo"-->
-<!--        android:layout_centerHorizontal="true"-->
-<!--        android:background="@drawable/namalogo"-->
-<!--        android:padding="8dp" />-->
+    <!--    <ImageView-->
+    <!--        android:id="@+id/img_logo"-->
+    <!--        android:layout_width="80dp"-->
+    <!--        android:layout_height="80dp"-->
+    <!--        android:layout_above="@id/text_masukSignUp"-->
+    <!--        android:layout_centerHorizontal="true"-->
+    <!--        android:background="@drawable/logosatwa"-->
+    <!--        android:padding="8dp" />-->
+    <!--    -->
+    <!--    <ImageView-->
+    <!--        android:id="@+id/img_logo3"-->
+    <!--        android:layout_width="260dp"-->
+    <!--        android:layout_height="50dp"-->
+    <!--        android:layout_below="@id/img_logo"-->
+    <!--        android:layout_centerHorizontal="true"-->
+    <!--        android:background="@drawable/namalogo"-->
+    <!--        android:padding="8dp" />-->
 
-<!--    <TextView-->
-<!--        android:id="@+id/text_masukSignUp"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_above="@id/layout_daftar"-->
-<!--        android:layout_centerHorizontal="true"-->
-<!--        android:layout_marginTop="4dp"-->
-<!--        android:layout_marginBottom="24dp"-->
-<!--        android:text=""-->
-<!--        android:textColor="@color/warnaPutih"-->
-<!--        android:textSize="28sp" />-->
+    <!--    <TextView-->
+    <!--        android:id="@+id/text_masukSignUp"-->
+    <!--        android:layout_width="wrap_content"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:layout_above="@id/layout_daftar"-->
+    <!--        android:layout_centerHorizontal="true"-->
+    <!--        android:layout_marginTop="4dp"-->
+    <!--        android:layout_marginBottom="24dp"-->
+    <!--        android:text=""-->
+    <!--        android:textColor="@color/warnaPutih"-->
+    <!--        android:textSize="28sp" />-->
 
     <LinearLayout
         android:id="@+id/layout_daftar"
@@ -62,15 +62,15 @@
         android:layout_marginRight="50dp"
         android:background="#ffffff"
         android:orientation="vertical">
-<!--        <ImageView-->
-<!--            android:id="@+id/img_logo3"-->
-<!--            android:layout_width="fill_parent"-->
-<!--            android:layout_height="fill_parent"-->
-<!--            android:scaleType="centerCrop"-->
-<!--            android:layout_centerHorizontal="true"-->
-<!--           -->
-<!--            android:padding="8dp"-->
-<!--            android:src="@drawable/ic_logo" />-->
+        <!--        <ImageView-->
+        <!--            android:id="@+id/img_logo3"-->
+        <!--            android:layout_width="fill_parent"-->
+        <!--            android:layout_height="fill_parent"-->
+        <!--            android:scaleType="centerCrop"-->
+        <!--            android:layout_centerHorizontal="true"-->
+        <!--           -->
+        <!--            android:padding="8dp"-->
+        <!--            android:src="@drawable/ic_logo" />-->
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/img_logo"
@@ -128,8 +128,8 @@
                 android:id="@+id/input_daftar_email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="E-mail"
-                android:inputType="textEmailAddress"
+                android:hint="Nomor Telepon"
+                android:inputType="text"
                 android:textColor="@color/warnaGelap"
                 android:textColorHint="@color/warnaGray"
                 android:textSize="16sp" />
@@ -156,8 +156,8 @@
                 android:id="@+id/input_daftar_password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Password"
-                android:inputType="textPassword"
+                android:hint="Nomor Verifikasi"
+                android:inputType="text"
                 android:textColor="@color/warnaGelap"
                 android:textColorHint="@color/warnaGray"
                 android:textSize="16sp" />
@@ -166,6 +166,21 @@
 
     </LinearLayout>
 
+    <Button
+        android:id="@+id/btn_verifikasi"
+        android:layout_width="200dp"
+        android:layout_height="50dp"
+        android:layout_below="@id/layout_daftar"
+        android:layout_centerHorizontal="true"
+        android:layout_marginLeft="48dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginRight="48dp"
+        android:background="@color/colorPrimary"
+        android:foreground="?android:attr/selectableItemBackground"
+        android:text="Verifikasi Code"
+        android:textAllCaps="false"
+        android:textColor="@color/warnaPutih"
+        android:textSize="24sp" />
     <Button
         android:id="@+id/btn_datftarDaftar"
         android:layout_width="200dp"
@@ -182,7 +197,7 @@
         android:textColor="@color/warnaPutih"
         android:textSize="24sp" />
 
-<!--    android:background="@drawable/bg_oval_white"-->
+    <!--    android:background="@drawable/bg_oval_white"-->
 
 
 
